<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start_game">START GAME</string>
    <string name="help">HELP</string>
    <string name="gamelogo">gameLogo</string>
    <string name="ruleslogo">rulesLogo</string>
    <string name="back">Back</string>
    <string name="settings_logo">Settings Logo</string>
    <string name="player_2">Player 2</string>
    <string name="name">Name</string>
    <string name="player_1">Player 1</string>
    <string name="start">Start</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="field1">field1</string>
    <string name="field2">field2</string>
    <string name="field3">field3</string>
    <string name="field4">field4</string>
    <string name="field5">field5</string>
    <string name="field6">field6</string>
    <string name="field7">field7</string>
    <string name="field8">field8</string>
    <string name="field9">field9</string>
    <string name="play_again">Play Again</string>
    <string name="gewinnername">Gewinnername</string>
</resources>